@@ -609,9 +609,13 @@ a:-webkit-any-link:active {
 
 /* HTML5 ruby elements */
 
+ruby, rt {
+    text-indent: 0; /* blocks used for ruby rendering should not trigger this */ 
+}
+
 ruby > rt {
     display: block;
-    font-size: 60%;         /* make slightly larger than 50% for better readability */
+    font-size: 60%; /* make slightly larger than 50% for better readability */
     text-align: center;
 }
 
